Fixed scrollbar color

--- a/packages/shadcn/src/styles/globals.css
+++ b/packages/shadcn/src/styles/globals.css
@@ -133,7 +133,7 @@
   }
 
   ::-webkit-scrollbar-thumb {
-    @apply bg-border;
+    @apply bg-muted-foreground/20;
     border-radius: var(--radius-lg);
   }
 
